Update entry open-court-fees-project

--- a/entries/open-court-fees-project.json
+++ b/entries/open-court-fees-project.json
@@ -3,7 +3,7 @@
   "title": "Open Court Fees Project",
   "overview": "A database for court fees across the United States, Coming Soon!",
   "full_description": "",
-  "project_type": "repository",
+  "project_type": "database",
   "lastupdate": "2026-02-26",
   "status": "coming_soon",
   "author": "Anonymous",
